Fix whitespace, fix "one question" bug

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,6 +53,11 @@ table {
   border-color: transparent;
 }
 
+.table-stripe {
+  tr:nth-child(2n) {
+    background-color: #f5f5f5;
+  }
+}
 
 @import 'header';
 @import 'pages';
