--- a/app/assets/stylesheets/chapters.css.scss
+++ b/app/assets/stylesheets/chapters.css.scss
@@ -3,58 +3,56 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .chapter-view {
-	width: 60%;
-	float: left;
+  width: 60%;
+  float: left;
 }
 
 .chapter-view table {
-	width: 100%;
-	text-align: center;
+  width: 100%;
+  text-align: center;
 }
 
 .chapter-view td.prev, td.next, td.all {
-	width: 20%;
+  width: 20%;
 }
 
 .chapter-view td.middle {
-	width: 40%;
+  width: 40%;
 }
 
 .chapter-view.assessment {
-	width: 100%;
+  width: 100%;
 }
 
-.chapter-rules {
-	width: 40%;
-	float: right;
-}
+.cms-chapter-edit-rules-reference-guide {
+  width: 40%;
+  float: right;
 
-.chapter-rules table {
-	width: 100%;
-	border: 1px solid black;
-}
+  table {
+    width: 100%;
+    border: 1px solid black;
+  }
 
-.chapter-rules td {
-	border-bottom: 1px solid black;
-}
+  td {
+    border-bottom: 1px solid black;
+  }
 
-.chapter-rules.name {
-	width: 75%;
-}
+  .rule-id a {
+    color: inherit;
+    text-decoration: inherit;
+    &:hover { text-decoration: underline; color: $skyblue; }
+  }
 
-.chapter-rules.id {
-	width: 25%;
-}
-
-.chapter-rules #temp1 {
-	width: 100%;
-	height: 300px;
-	background-color: grey;
+  #temp1 {
+    width: 100%;
+    height: 300px;
+    background-color: grey;
+  }
 }
 
 .chapter-view.form {
-	.text.body textarea {
-		width: 400px;
-		height: 200px;
-	}
+  .text.body textarea {
+    width: 400px;
+    height: 200px;
+  }
 }
